Adds basic camera view.

--- a/CocoaHeadsStyleTransferDemo/Info.plist
+++ b/CocoaHeadsStyleTransferDemo/Info.plist
@@ -39,6 +39,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>The only purpose of the app is to stylize the video we capture through the camera.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
